--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -4,16 +4,12 @@ on: [push, pull_request]
 
 jobs:
   test:
-    - name: Run pytest (generate junit xml) 
-      run: pytest -v scripts/ --junitxml=pytest-report.xml 
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
-    - name: Upload test report artifact 
-      uses: actions/upload-artifact@v4 
-      with: 
-        name: pytest-report_${{ matrix.os }} 
-        path: pytest-report.xml
-     
-  steps:
+    steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
@@ -27,5 +23,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
 
-      - name: Run pytest
-        run: pytest -v scripts/
+      - name: Run pytest (generate junit xml) 
+        run: pytest -v scripts/ --junitxml=pytest-report.xml
+
+      - name: Upload test report artifact 
+        if: always() 
+        uses: actions/upload-artifact@v4 
+        with: 
+          name: pytest-report_${{ matrix.os }} 
+          path: pytest-report.xml
