--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -4,10 +4,7 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
@@ -23,12 +20,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
 
-      - name: Run pytest (generate junit xml) 
+      - name: Run pytest (generate junit xml)
         run: pytest -v scripts/ --junitxml=pytest-report.xml
 
-      - name: Upload test report artifact 
-        if: always() 
-        uses: actions/upload-artifact@v4 
-        with: 
-          name: pytest-report_${{ matrix.os }} 
+      - name: Upload test report artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-report
           path: pytest-report.xml
